--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -766,7 +766,7 @@
     </details>
 </section>
                 
-<!-- ÜÇÜNCÜ BÖLÜM: Özel Alanın Korunması (Madde 20-22) -->
+<!-- ÜÇÜNCÜ BÖLÜM: Özel Alanın Korunması -->
 <section aria-labelledby="bolum-ozel-alan">
     <h3 id="bolum-ozel-alan" class="subsection-title text-2xl font-bold mt-12 mb-4">
         ÜÇÜNCÜ BÖLÜM: Özel Alanın Korunması
@@ -774,7 +774,6 @@
     <p class="text-slate-600 mb-6" style="text-align: justify;">
         Bu bölümde yer alan maddeler, bireyin özel hayatının, konutunun ve haberleşmesinin devlet müdahalesinden korunmasını sağlar. Bu haklara müdahale, yalnızca katı usul kurallarıyla sınırlıdır.
     </p>
-</section>
 
     <!-- Madde 20 -->
     <details id="madde-20" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
@@ -783,21 +782,37 @@
         </summary>
         <div class="px-4 pb-4 mt-2 border-t pt-4">
             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
-                Herkesin özel hayatı ve aile hayatı, korunur. Bu alana hiçbir kimsenin ve makamın ailesi, evi, özel kâğıtları, özel eşyası ve özel haberleşmesi hakkında araştırması, araması, el koyması, incelemesi veya kaydına girmesi, gizli dinlenmesi veya haberleşmesiyle ilgili belgelerin açığa çıkarılması gibi bir hakkının veya iktidarının bulunması kabul edilmez.
+                Herkes, özel hayatına ve aile hayatına saygı gösterilmesini isteme hakkına sahiptir. Özel hayatın ve aile hayatının gizliliğine dokunulamaz.
             </blockquote>
             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
-                Özel hayatın gizliliğine ilişkin arama ve el koyma, ancak hâkim kararıyla yapılır. Gecikmesinde sakınca bulunan hallerde, kanunla yetkilendirilmiş merciin yazılı emriyle de arama ve el koyma yapılabilir. Bu emir, <strong>en geç yirmidört saat içinde görevli hâkimin onayına sunulur</strong>. Hâkim, bu onay talebini <strong>en geç kırksekiz saat içinde karara bağlar</strong>.
+                Millî güvenlik, kamu düzeni, suç işlenmesinin önlenmesi, genel sağlık ve genel ahlâkın korunması veya başkalarının hak ve özgürlüklerinin korunması sebeplerinden biri veya birkaçına bağlı olarak, usulüne göre verilmiş hâkim kararı olmadıkça; yine bu sebeplere bağlı olarak gecikmesinde sakınca bulunan hallerde de kanunla yetkili kılınmış merciin yazılı emri bulunmadıkça; kimsenin üstü, özel kâğıtları ve eşyası aranamaz ve bunlara el konulamaz.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Yetkili merciin kararı yirmidört saat içinde görevli hâkimin onayına sunulur. Hâkim, kararını el koymadan itibaren kırksekiz saat içinde açıklar; aksi halde, el koyma kendiliğinden kalkar.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Herkes, kendisiyle ilgili kişisel verilerin korunmasını isteme hakkına sahiptir. Bu hak; kişinin kendisiyle ilgili kişisel veriler hakkında bilgilendirilme, bu verilere erişme, bunların düzeltilmesini veya silinmesini talep etme ve amaçları doğrultusunda kullanılıp kullanılmadığını öğrenmeyi de kapsar.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Kişisel veriler, ancak kanunda öngörülen hallerde veya kişinin açık rızasıyla işlenebilir. Kişisel verilerin korunmasına ilişkin esas ve usuller kanunla düzenlenir.
             </blockquote>
             <div class="strategy-box mt-4">
                 <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Arama ve El Koymada "24/48 Kuralı"</h6>
                 <p style="text-align: justify;" class="text-sm mb-3">Bu ve sonraki iki maddedeki en önemli sınav sorusu bu kuraldan gelir:</p>
-                <ol class="list-decimal pl-5 text-sm space-y-1">
+                <ol class="list-decimal pl-5 text-sm space-y-2">
                     <li><strong>Ana Kural:</strong> Arama ve el koyma için <strong>HÂKİM KARARI</strong> şarttır.</li>
                     <li><strong>İstisna:</strong> Gecikmesinde sakınca varsa, kanunla yetkilendirilmiş merciin (Örn: Kolluk Amiri) <strong>YAZILI EMRİ</strong> yeterlidir.</li>
                     <li><strong>Denetim:</strong> Bu yazılı emir, <strong>24 SAAT İÇİNDE</strong> görevli hâkimin onayına sunulmak zorundadır.</li>
                     <li><strong>Sonuç:</strong> Hâkim, <strong>48 SAAT İÇİNDE</strong> kararını açıklamazsa, el koyma kararı kendiliğinden kalkar.</li>
                 </ol>
-                <p class="text-sm mt-2" style="text-align: justify;"><strong>📌 Özet:</strong> 24 saat içinde hâkime sunulur → 48 saat içinde hâkim karar verir. Karar vermezse, işlem geçersiz olur.</p>
+            </div>
+            <div class="highlight-box mt-4">
+                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Hoca Yorumu: Kişisel Verilerin Korunması</h6>
+                <p style="text-align: justify;" class="text-sm">Maddenin son fıkrası, dijital çağın bir gerekliliği olarak Anayasa'ya eklenmiştir. Bu fıkra, Türkiye'deki Kişisel Verilerin Korunması Kanunu'nun (KVKK) anayasal temelini oluşturur. Sınavda, kişisel verilerin korunmasının anayasal bir hak olduğu bilinmelidir.</p>
+            </div>
+            <div class="warning-box mt-4">
+                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💡</span>Ek Not: Sınırlama Sebepleri</h6>
+                <p style="text-align: justify;" class="text-sm">Unutmayın, hâkim kararı veya yetkili merciin yazılı emri gibi usullerin uygulanabilmesi için, metinde sayılan sınırlama sebeplerinden (millî güvenlik, kamu düzeni, suçun önlenmesi vb.) en az birinin mevcut olması zorunludur.</p>
             </div>
         </div>
     </details>
@@ -809,10 +824,17 @@
         </summary>
         <div class="px-4 pb-4 mt-2 border-t pt-4">
             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
-                Konut dokunulmazlığı, herkes için sakındır. <strong>Kimsenin konutuna resmî makam tarafından da olsa, hâkim kararı olmadan veya gecikmesinde sakınca bulunan hallerde kanunla yetkilendirilmiş merciin yazılı emri olmadan girilemez.</strong>
+                Kimsenin konutuna dokunulamaz.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Millî güvenlik, kamu düzeni, suç işlenmesinin önlenmesi, genel sağlık ve genel ahlâkın korunması veya başkalarının hak ve özgürlüklerinin korunması sebeplerinden biri veya birkaçına bağlı olarak usulüne göre verilmiş hâkim kararı olmadıkça; yine bu sebeplere bağlı olarak gecikmesinde sakınca bulunan hallerde de kanunla yetkili kılınmış merciin yazılı emri bulunmadıkça; kimsenin konutuna girilemez, arama yapılamaz ve buradaki eşyaya el konulamaz.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Yetkili merciin kararı yirmidört saat içinde görevli hâkimin onayına sunulur. Hâkim, kararını el koymadan itibaren kırksekiz saat içinde açıklar; aksi halde, el koyma kendiliğinden kalkar.
             </blockquote>
             <div class="highlight-box mt-4">
-                <p style="text-align: justify;"><strong>🧠 Hoca Yorumu:</strong> Dikkat! Bu maddedeki usul, bir önceki maddedeki (Özel Hayatın Gizliliği) arama ve el koyma usulü ile birebir aynıdır. Yani, meşhur <strong>24/48 saat kuralı</strong> burada da geçerlidir. Birini öğrenen, diğerini de ezberlemiş olur. Sınavda konut dokunulmazlığı için de, özel hayatın gizliliği için de aynı usul kurallarını arayın.</p>
+                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Hoca Yorumu: Aynı Kural, Farklı Mekan!</h6>
+                <p style="text-align: justify;" class="text-sm">Dikkat! Bu maddedeki usul, bir önceki maddedeki (Özel Hayatın Gizliliği) arama ve el koyma usulü ile birebir aynıdır. Yani, meşhur <strong>24/48 saat kuralı</strong> burada da geçerlidir. Birini öğrenen, diğerini de ezberlemiş olur. Sınavda konut dokunulmazlığı için de, özel hayatın gizliliği için de aynı usul kurallarını arayın.</p>
             </div>
         </div>
     </details>
@@ -824,22 +846,24 @@
         </summary>
         <div class="px-4 pb-4 mt-2 border-t pt-4">
             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
-                Herkesin, haberleşme hürriyeti sakındır. <strong>Kimse, haberiyle ilgili gizlilik isteğini açıkça belirttiği hâlde, bu gizliliğe hukuka aykırı olarak tecavüz edilemez.</strong>
+                Herkes, haberleşme hürriyetine sahiptir. Haberleşmenin gizliliği esastır.
             </blockquote>
             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
-                Haberleşmenin gizliliğine dokunulması, yalnızca hâkim kararıyla veya gecikmesinde sakınca bulunan hallerde kanunla yetkilendirilmiş merciin yazılı emriyle olur. Bu emir, <strong>en geç yirmidört saat içinde görevli hâkimin onayına sunulur</strong>. Hâkim, bu onay talebini <strong>en geç kırksekiz saat içinde karara bağlar</strong>.
+                Millî güvenlik, kamu düzeni, suç işlenmesinin önlenmesi, genel sağlık ve genel ahlâkın korunması veya başkalarının hak ve özgürlüklerinin korunması sebeplerinden biri veya birkaçına bağlı olarak usulüne göre verilmiş hâkim kararı olmadıkça; yine bu sebeplere bağlı olarak gecikmesinde sakınca bulunan hallerde de kanunla yetkili kılınmış merciin yazılı emri bulunmadıkça; haberleşme engellenemez ve gizliliğine dokunulamaz.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Yetkili merciin kararı yirmidört saat içinde görevli hâkimin onayına sunulur. Hâkim, kararını kırksekiz saat içinde açıklar; aksi halde, karar kendiliğinden kalkar.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                İstisnaların uygulanacağı kamu kurum ve kuruluşları kanunda belirtilir.
             </blockquote>
             <div class="highlight-box mt-4">
-                <p style="text-align: justify;"><strong>🧠 Hoca Yorumu (Aynı Kural, Üçüncü Kez!):</strong> Haberleşmenin gizliliğine dokunma usulü de Madde 20 ve 21 ile tıpatıp aynıdır. Ana kural <strong>hâkim kararı</strong>, istisnası <strong>yetkili merciin yazılı emri</strong> ve <strong>24/48 saat denetim süresi</strong>. Anayasa bu üç özel alana (özel hayat, konut, haberleşme) aynı derecede önem vermiş ve aynı koruma kalkanını sağlamıştır.</p>
+                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Hoca Yorumu (Aynı Kural, Üçüncü Kez!)</h6>
+                <p style="text-align: justify;" class="text-sm">Haberleşmenin gizliliğine dokunma usulü de Madde 20 ve 21 ile tıpatıp aynıdır. Ana kural <strong>hâkim kararı</strong>, istisnası <strong>yetkili merciin yazılı emri</strong> ve <strong>24/48 saat denetim süresi</strong>. Anayasa bu üç özel alana (özel hayat, konut, haberleşme) aynı derecede önem vermiş ve aynı koruma kalkanını sağlamıştır.</p>
             </div>
-            <div class="warning-box mt-4">
-                <p style="text-align: justify;"><strong>⚠️ Karıştırılmaması Gerekenler:</strong></p>
-                <ul class="list-disc pl-5 text-sm mt-2">
-                    <li><strong>24 saat:</strong> Yazılı emir hâkime sunulma süresi.</li>
-                    <li><strong>48 saat:</strong> Hâkimin karar verme süresi.</li>
-                    <li><strong>48 saat:</strong> Kişi hâkim önüne çıkarılma süresi (Madde 19).</li>
-                </ul>
-                <p class="text-sm mt-2">Sınavda bu süreler karıştırılarak sorulur. Hangi maddeye ait olduğunu bilin.</p>
+            <div class="strategy-box mt-4">
+                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: İstisnanın Kapsamı</h6>
+                <p style="text-align: justify;" class="text-sm">Maddenin son cümlesi önemlidir: <strong>"İstisnaların uygulanacağı kamu kurum ve kuruluşları kanunda belirtilir."</strong> Bu, haberleşmenin denetlenmesi gibi istisnai yetkilerin hangi kurumlar (Örn: MİT, Emniyet) tarafından kullanılabileceğinin keyfi bir şekilde değil, <strong>kanunla belirlenmek zorunda</strong> olduğunu ifade eder. Bu da bir hukuk devleti güvencesidir.</p>
             </div>
         </div>
     </details>
