--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -868,7 +868,7 @@
         </div>
     </details>
 </section>
-<!-- DÖRDÜNCÜ BÖLÜM: Düşünce ve İfade Hürriyeti (Madde 23-27) -->
+<!-- DÖRDÜNCÜ BÖLÜM: Düşünce ve İfade Hürriyeti -->
 <section aria-labelledby="bolum-dusunce-ifade">
     <h3 id="bolum-dusunce-ifade" class="subsection-title text-2xl font-bold mt-12 mb-4">
         DÖRDÜNCÜ BÖLÜM: Düşünce ve İfade Hürriyeti
@@ -876,7 +876,6 @@
     <p class="text-slate-600 mb-6" style="text-align: justify;">
         Bu bölümde yer alan maddeler, bireyin düşüncelerini, inançlarını, dinini ve bilim-sanat faaliyetlerini özgürce geliştirme ve yayma hakkını düzenler. Bu haklar, bireyin iç dünyasını ve ifade özgürlüğünü korur.
     </p>
-</section>
 
     <!-- Madde 23 -->
     <details id="madde-23" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
@@ -885,10 +884,22 @@
         </summary>
         <div class="px-4 pb-4 mt-2 border-t pt-4">
             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
-                Herkes, <strong>yerleşme ve seyahat hürriyetine</strong> sahiptir. Bu hürriyet, yalnızca <strong>kanunla</strong> ve <strong>millî güvenlik</strong>, <strong>kamu düzeni</strong>, <strong>kamu sağlığı</strong>, <strong>genel ahlak</strong> veya <strong>başkalarının hakları</strong> gibi sebeplerle sınırlanabilir.
+                Herkes, yerleşme ve seyahat hürriyetine sahiptir.
             </blockquote>
             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
-                Vatandaş, <strong>ülkeden çıkamaz</strong> veya <strong>ülkeye alınamaz</strong> ancak <strong>hâkim kararı</strong> veya <strong>meşru müdafaa</strong> hali ile sınırlanabilir.
+                Yerleşme hürriyeti, suç işlenmesini önlemek, sosyal ve ekonomik gelişmeyi sağlamak, sağlıklı ve düzenli kentleşmeyi gerçekleştirmek ve kamu mallarını korumak;
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Seyahat hürriyeti, suç soruşturması veya kovuşturması sebebiyle ve suç işlenmesini önlemek;
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Amaçlarıyla kanunla sınırlanabilir.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Vatandaşın yurt dışına çıkma hürriyeti, ancak suç soruşturması veya kovuşturması sebebiyle <strong>hâkim kararına bağlı olarak sınırlanabilir</strong>.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Vatandaş sınır dışı edilemez ve yurda girme hakkından yoksun bırakılamaz.
             </blockquote>
             <div class="strategy-box mt-4">
                 <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Sınırlama Sebeplerindeki Farklılıklar</h6>
@@ -897,9 +908,9 @@
                     <div class="bg-blue-50 p-4 rounded-md border-l-4 border-blue-400">
                         <h6 class="font-bold text-blue-800 mb-2">📍 Yerleşme Hürriyeti Sınırlanabilir:</h6>
                         <ul class="list-disc pl-5 space-y-1">
-                            <li>Suç işlemeyi önlemek</li>
+                            <li>Suç işlenmesini önlemek</li>
                             <li>Sosyal ve ekonomik gelişmeyi sağlamak</li>
-                            <li>Sağlıklı ve düzenli kentleşme</li>
+                            <li>Sağlıh ve düzenli kentleşmeyi gerçekleştirmek</li>
                             <li>Kamu mallarını korumak</li>
                         </ul>
                     </div>
@@ -907,7 +918,7 @@
                         <h6 class="font-bold text-amber-800 mb-2">✈️ Seyahat Hürriyeti Sınırlanabilir:</h6>
                         <ul class="list-disc pl-5 space-y-1">
                             <li>Suç soruşturması ve kovuşturması</li>
-                            <li>Suç işlemeyi önlemek</li>
+                            <li>Suç işlenmesini önlemek</li>
                         </ul>
                     </div>
                 </div>
@@ -923,13 +934,19 @@
         </summary>
         <div class="px-4 pb-4 mt-2 border-t pt-4">
             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
-                Herkes, <strong>din ve vicdan hürriyetine</strong> sahiptir. Kimse, dinini veya vicdanını açıklamaya zorlanamaz ve bunlardan dolayı suçlanamaz.
+                Herkes, vicdan, dini inanç ve kanaat hürriyetine sahiptir.
             </blockquote>
             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
-                Din ve vicdan hürriyeti, herkesin dinî inanç, kanaat, kılış ve ibadetlerini yerine getirme, öğretme, öğrenme, açıklama ve yayma hürriyetini de kapsar.
+                14 üncü madde hükümlerine aykırı olmamak şartıyla ibadet, dini ayin ve törenler serbesttir.
             </blockquote>
             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
-                Devlet, din işlerini yönetemez ve din ile devlet işlerini birbirine karıştıramaz. Devletin dini yoktur.
+                Kimse, ibadete, dini ayin ve törenlere katılmaya, dini inanç ve kanaatlerini açıklamaya zorlanamaz; dini inanç ve kanaatlerinden dolayı kınanamaz ve suçlanamaz.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Din ve ahlak eğitim ve öğretimi Devletin gözetim ve denetimi altında yapılır. Din kültürü ve ahlak öğretimi ilk ve ortaöğretim kurumlarında okutulan zorunlu dersler arasında yer alır. Bunun dışındaki din eğitim ve öğretimi ancak, kişilerin kendi isteğine, küçüklerin de kanuni temsilcisinin talebine bağlıdır.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Kimse, Devletin sosyal, ekonomik, siyasi veya hukuki temel düzenini kısmen de olsa, din kurallarına dayandırma veya siyasi veya kişisel çıkar yahut nüfuz sağlama amacıyla her ne suretle olursa olsun dini veya din duygularını yahut dince kutsal sayılan şeyleri istismar edemez ve kötüye kullanamaz.
             </blockquote>
             <div class="highlight-box mt-4">
                 <p style="text-align: justify;"><strong>🧠 Hoca Yorumu:</strong> Bu madde, inanç dünyasının tamamen serbest olduğunu güvence altına alır. Kimse inancını açıklamaya zorlanamaz. Sınav için dikkat edilmesi gereken nokta, <strong>"Din Kültürü ve Ahlak Bilgisi"</strong> dersinin okullarda zorunlu olduğudur. Bunun dışındaki özel din eğitimi ise tamamen kişilere bırakılmıştır.</p>
@@ -944,7 +961,10 @@
         </summary>
         <div class="px-4 pb-4 mt-2 border-t pt-4">
             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
-                Herkes, <strong>düşünce ve kanaat hürriyetine</strong> sahiptir. Kimse, düşünce ve kanaatleri nedeniyle kınanamaz veya suçlanamaz.
+                Herkes, düşünce ve kanaat hürriyetine sahiptir.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Her ne sebep ve amaçla olursa olsun kimse, düşünce ve kanaatlerini açıklamaya zorlanamaz; düşünce kanaatleri sebebiyle kınanamaz ve suçlanamaz.
             </blockquote>
             <div class="highlight-box mt-4">
                 <p style="text-align: justify;"><strong>🧠 Hoca Yorumu:</strong> Bu hak, kişinin <strong>"iç dünyası"</strong> ile ilgilidir. Sadece düşünmek ve bir kanaate sahip olmak eylemini korur. Dışa vurulmadığı sürece düşüncenin bir sınırı yoktur. Bu nedenle Anayasa'daki <strong>mutlak ve sınırsız</strong> olan ender haklardan biridir. Sınavda bu maddenin <strong>"sınırlanamaz"</strong> olduğunu vurgulayan sorular gelir.</p>
@@ -959,7 +979,16 @@
         </summary>
         <div class="px-4 pb-4 mt-2 border-t pt-4">
             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
-                Herkes, <strong>düşüncelerini açıklama ve yayma hürriyetine</strong> sahiptir. Bu hürriyet, yalnızca <strong>kanunla</strong> ve <strong>millî güvenlik</strong>, <strong>kamu düzeni</strong>, <strong>kamu güvenliği</strong>, <strong>suçların önlenmesi</strong>, <strong>yargılamanın gizliliği</strong>, <strong>başkalarının şöhret ve hakları</strong>, <strong>özel ve aile hayatı</strong>, <strong>meslek sırları</strong>, <strong>devlet sırları</strong> ve <strong>devletin temel nitelikleri</strong> gibi sebeplerle sınırlanabilir.
+                Herkes, düşünce ve kanaatlerini söz, yazı, resim veya başka yollarla tek başına veya toplu olarak açıklama ve yayma hakkına sahiptir. Bu hürriyet Resmî makamların müdahalesi olmaksızın haber veya fikir almak ya da vermek serbestliğini de kapsar. Bu fıkra hükmü, radyo, televizyon, sinema veya benzeri yollarla yapılan yayımların izin sistemine bağlanmasına engel değildir.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Bu hürriyetlerin kullanılması, millî güvenlik, kamu düzeni, kamu güvenliği, Cumhuriyetin temel nitelikleri ve Devletin ülkesi ve milleti ile bölünmez bütünlüğünün korunması, suçların önlenmesi, suçluların cezalandırılması, Devlet sırrı olarak usulünce belirtilmiş bilgilerin açıklanmaması, başkalarının şöhret veya haklarının, özel ve aile hayatlarının yahut kanunun öngördüğü meslek sırlarının korunması veya yargılama görevinin gereğine uygun olarak yerine getirilmesi amaçlarıyla sınırlanabilir.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Haber ve düşünceleri yayma araçlarının kullanılmasına ilişkin düzenleyici hükümler, bunların yayımını engellememek kaydıyla, düşünceyi açıklama ve yayma hürriyetinin sınırlanması sayılmaz.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Düşünceyi açıklama ve yayma hürriyetinin kullanılmasında uygulanacak şekil, şart ve usuller kanunla düzenlenir.
             </blockquote>
             <div class="strategy-box mt-4">
                 <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Sınırlama Sebepleri Şifre Çözücü</h6>
@@ -1026,6 +1055,7 @@
             </table>
         </div>
     </div>
+</section>
 
     <!-- Madde 27 -->
     <details id="madde-27" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
