--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -1277,13 +1277,13 @@
         </div>
     </details>
 </section>
-                <!-- ALTINCI BÖLÜM: Toplantı ve Örgütlenme Hürriyetleri -->
+<!-- ALTINCI BÖLÜM: Toplantı ve Örgütlenme Hürriyetleri -->
 <section aria-labelledby="bolum-toplanti-orgutlenme">
     <h3 id="bolum-toplanti-orgutlenme" class="subsection-title text-2xl font-bold mt-12 mb-4">
         ALTINCI BÖLÜM: Toplantı ve Örgütlenme Hürriyetleri
     </h3>
     <p class="text-slate-600 mb-6" style="text-align: justify;">
-        Bu bölüm, bireylerin bir araya gelerek ortak amaçlar doğrultusunda örgütlenme ve ifade özgürlüğünü kullanma hakkını kapsar. Dernek kurma, toplantı yapma ve gösteri yürüyüşü düzenleme gibi haklar, demokratik katılımın temel taşlarıdır. Sınavda en çok <strong>usul kuralları</strong>, <strong>istisnalar</strong> ve <strong>idari müdahale sınırları</strong> sorulur.
+        Bu bölümde yer alan maddeler, bireylerin bir araya gelerek ortak amaçlar doğrultusunda örgütlenme ve ifade özgürlüğünü kullanma hakkını kapsar. Dernek kurma, toplantı yapma ve gösteri yürüyüşü düzenleme gibi haklar, demokratik katılımın temel taşlarıdır. Sınavda en çok <strong>usul kuralları</strong>, <strong>istisnalar</strong> ve <strong>idari müdahale sınırları</strong> sorulur.
     </p>
 
     <!-- Madde 33 -->
@@ -1293,17 +1293,60 @@
         </summary>
         <div class="px-4 pb-4 mt-2 border-t pt-4">
             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
-                Herkes, <strong>dernek kurma</strong> hakkına sahiptir. Dernek kurmak için önceden izin alınmaz. Ancak kanunla suç teşkil eden amaç ve faaliyetlerle dernek kurulamaz.
+                Herkes, önceden izin almaksızın dernek kurma ve bunlara üye olma ya da üyelikten çıkma hürriyetine sahiptir.
             </blockquote>
             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
-                Derneklerin faaliyetlerinin durdurulması ve <strong>kapatılması ancak hâkim kararıyla</strong> olur. Gecikmesinde sakınca bulunan hallerde, kanunla yetkilendirilmiş merciin yazılı emriyle geçici olarak faaliyetler durdurulabilir. Bu emir, <strong>en geç yirmidört saat içinde görevli hâkimin onayına sunulur</strong>. Hâkim, bu onay talebini <strong>en geç kırksekiz saat içinde karara bağlar</strong>.
+                Hiç kimse bir derneğe üye olmaya ve dernekte üye kalmaya zorlanamaz.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Dernek kurma hürriyeti ancak, millî güvenlik, kamu düzeni, suç işlenmesinin önlenmesi, genel sağlık ve genel ahlâk ile başkalarının hürriyetlerinin korunması sebepleriyle ve kanunla sınırlanabilir.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Dernek kurma hürriyetinin kullanılmasında uygulanacak şekil, şart ve usuller kanunda gösterilir.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Dernekler, kanunun öngördüğü hallerde hâkim kararıyla kapatılabilir veya faaliyetten alıkonulabilir. Ancak, millî güvenliğin, kamu düzeninin, suç işlenmesini veya suçun devamını önlemenin yahut yakalamanın gerektirdiği hallerde gecikmede sakınca varsa, kanunla bir merci, derneği faaliyetten men ile yetkilendirilebilir. Bu merciin kararı, yirmidört saat içinde görevli hâkimin onayına sunulur. Hâkim, kararını kırksekiz saat içinde açıklar; aksi halde, bu idarî karar kendiliğinden yürürlükten kalkar.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Birinci fıkra hükmü, Silahlı Kuvvetler ve kolluk kuvvetleri mensuplarına ve görevlerinin gerektirdiği ölçüde Devlet memurlarına kanunla sınırlamalar getirilmesine engel değildir.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Bu madde hükümleri vakıflarla ilgili olarak da uygulanır.
             </blockquote>
             <div class="highlight-box mt-4">
-                <p style="text-align: justify;"><strong>🧠 Hoca Yorumu:</strong> Tıpkı basın gibi, dernek kurmak da "izin" sistemine değil, "bildirim" sistemine tabidir. Yani bir dernek kurmak için devletten izin almazsınız; kurarsınız ve gerekli belgeleri ilgili makama (Valilik) bildirirsiniz.</p>
+                <p style="text-align: justify;"><strong>🧠 Hoca Yorumu: İzin Değil, Bildirim!</strong></p>
+                <p style="text-align: justify;">Tıpkı basın gibi, dernek kurmak da "izin" sistemine değil, "bildirim" sistemine tabidir. Yani bir dernek kurmak için devletten izin almazsınız; kurarsınız ve gerekli belgeleri ilgili makama (Valilik) bildirirsiniz. Ayrıca, kimsenin bir derneğe üye olmaya veya üye kalmaya zorlanamayacağı da mutlak bir kuraldır.</p>
             </div>
             <div class="strategy-box mt-4">
-                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Derneklerin Faaliyetten Meni ve "24/48 Kuralı"</h6>
-                <p style="text-align: justify;" class="text-sm mb-3">Bu kural artık tanıdık gelmeli! Bir derneğin kapatılması için ana kural hâkim kararıdır. Ancak istisnai ve acil durumlarda, kanunla yetkilendirilmiş bir idari merci (örn: Vali) derneği geçici olarak faaliyetten men edebilir. Bu durumda idari karar, 24 saat içinde hâkime sunulur ve hâkim 48 saat içinde onaylamazsa yasaklama kararı kalkar. Bu, Anayasa'nın idari keyfiliği önlemek için koyduğu önemli bir güvencedir.</p>
+                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Kapatma ve Faaliyetten Men Usulü</h6>
+                <p style="text-align: justify;" class="text-sm mb-3">Bu maddedeki usul kuralları sınavlar için kritiktir:</p>
+                <ul class="list-none space-y-2 text-sm">
+                    <li class="flex items-start">
+                        <span class="mr-3 mt-1 text-green-700">🔒</span>
+                        <div>
+                            <strong>Kapatma (Kalıcı):</strong> Dernekler ancak ve ancak bir <strong>HÂKİM KARARIYLA</strong> kalıcı olarak kapatılabilir. İdari bir makam derneği kapatamaz.
+                        </div>
+                    </li>
+                    <li class="flex items-start">
+                        <span class="mr-3 mt-1 text-amber-700">⏸️</span>
+                        <div>
+                            <strong>Faaliyetten Men (Geçici):</strong> Ancak, gecikmesinde sakınca olan istisnai durumlarda (milli güvenlik, kamu düzeni vb.), kanunun yetkili kıldığı bir idari merci (örn: Vali) derneği geçici olarak faaliyetten men edebilir.
+                        </div>
+                    </li>
+                    <li class="flex items-start">
+                        <span class="mr-3 mt-1 text-red-700">⏱️</span>
+                        <div>
+                            <strong>Güvence (24/48 Kuralı):</strong> Bu geçici men kararı, 24 saat içinde hâkimin onayına sunulur. Hâkim 48 saat içinde kararını açıklamazsa, idari makamın men kararı kendiliğinden kalkar.
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="warning-box mt-4">
+                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💡</span>Ek Not: Kapsam ve İstisnalar</h6>
+                <ul class="list-disc pl-5 text-sm space-y-1">
+                    <li>Bu maddedeki kurallar, sadece dernekler için değil, <strong>vakıflar</strong> için de geçerlidir.</li>
+                    <li><strong>Silahlı Kuvvetler, kolluk kuvvetleri ve Devlet memurlarının</strong> dernek kurma hürriyetlerine, görevlerinin gerektirdiği ölçüde kanunla özel sınırlamalar getirilebilir.</li>
+                </ul>
             </div>
         </div>
     </details>
@@ -1315,10 +1358,13 @@
         </summary>
         <div class="px-4 pb-4 mt-2 border-t pt-4">
             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
-                Herkes, <strong>silahsız</strong> ve <strong>barışçıl</strong> şekilde toplantı ve gösteri yürüyüşü düzenleme hakkına sahiptir.
+                Herkes, önceden izin almadan, silahsız ve saldırısız toplantı ve gösteri yürüyüşü düzenleme hakkına sahiptir.
             </blockquote>
             <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
-                Toplantı ve gösteri yürüyüşlerine ilişkin usul, kanunla düzenlenir. Bu faaliyetler, <strong>millî güvenlik</strong>, <strong>kamu düzeni</strong>, <strong>kamu sağlığı</strong>, <strong>genel ahlak</strong> veya <strong>başkalarının hakları</strong> gibi sebeplerle sınırlanabilir.
+                Toplantı ve gösteri yürüyüşü hakkı ancak, millî güvenlik, kamu düzeni, suç işlenmesinin önlenmesi, genel sağlığın ve genel ahlâkın veya başkalarının hak ve özgürlüklerinin korunması amacıyla ve kanunla sınırlanabilir.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Toplantı ve gösteri yürüyüşü düzenleme hakkının kullanılmasında uygulanacak şekil, şart ve usuller kanunda gösterilir.
             </blockquote>
             <div class="strategy-box mt-4">
                 <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Hakkın Kullanımının 3 Temel Şartı</h6>
@@ -1328,6 +1374,33 @@
                     <li><strong>Silahsız Olma:</strong> Toplantıya katılanların ateşli silah, patlayıcı madde, kesici/delici alet vb. taşımaması gerekir.</li>
                     <li><strong>Saldırısız Olma:</strong> Toplantının barışçıl bir amaç ve yöntemle yapılması, şiddete başvurulmaması esastır.</li>
                 </ol>
+            </div>
+        </div>
+    </details>
+
+    <!-- Madde 35 -->
+    <details id="madde-35" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+        <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+            <span class="mr-3 text-xl">📘</span> Madde 35 – Mülkiyet Hakkı
+        </summary>
+        <div class="px-4 pb-4 mt-2 border-t pt-4">
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+                Herkes, mülkiyet ve miras haklarına sahiptir.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Bu haklar, ancak kamu yararı amacıyla, kanunla sınırlanabilir.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Mülkiyet hakkının kullanılması toplum yararına aykırı olamaz.
+            </blockquote>
+            <div class="highlight-box mt-4">
+                <p style="text-align: justify;"><strong>🧠 Hoca Yorumu: Sınırlı Bir Hak</strong></p>
+                <p style="text-align: justify;">Mülkiyet hakkı, "Kişinin Hakları" içinde yer alsa da, mutlak bir hak değildir. Anayasa, bu hakkın iki temel koşulla sınırlanabileceğini belirtir:</p>
+                <ul class="list-disc pl-5 space-y-1">
+                    <li><strong>Sınırlama mutlaka bir KANUNA dayanmalıdır.</strong></li>
+                    <li><strong>Sınırlamanın bir KAMU YARARI amacı taşıması gerekir</strong> (Örneğin, yol veya hastane yapmak için yapılan kamulaştırma).</li>
+                </ul>
+                <p class="mt-2" style="text-align: justify;"><strong>Ayrıca</strong>, "Mülkiyet hakkının kullanılması toplum yararına aykırı olamaz" ilkesi, Anayasa'nın "sosyal devlet" anlayışının bir yansımasıdır ve mülkiyete toplumsal bir sorumluluk yükler.</p>
             </div>
         </div>
     </details>
